# anonymask

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  anonymask.linux-x64-gnu.node  anonymask.node  notes.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml  release_npm.yml  release_pip.yml
anonymask-core/: Cargo.toml
anonymask-core/src/: anonymizer.rs  config.rs  detection.rs  entity.rs  error.rs  lib.rs
anonymask-node/: Cargo.toml  README.md  anonymask.linux-x64-gnu.node  anonymask.node  anonymask.wasi-browser.js  anonymask.wasi.cjs  browser.js  index.d.ts  index.js  package-lock.json  package.json  sample.js  test.js
anonymask-node/.github/workflows/: release_npm.yml
anonymask-node/src/: lib.rs
anonymask-node/tests/: test_anonymask.test.js
anonymask-py/: Cargo.toml  README.md  pyproject.toml
anonymask-py/python/anonymask/: __init__.py
anonymask-py/src/: lib.rs
anonymask-py/tests/: test_anonymask.py
benches/: anonymization_benchmark.rs
bindings/node/: package-lock.json  package.json  test.js
bindings/node/tests/: test_anonymask.js
bindings/python/: pyproject.toml
examples/node/: basic_usage.js  express_middleware.js
examples/python/: basic_usage.py  rag_integration.py
src/: detection.rs  lib.rs  main.rs
