[package]
name = "anonymask-node"
version = "0.1.4"
edition = "2021"
description = "Node.js bindings for anonymask-core"
license = "MIT"
authors = ["Gokul Viswanathan <gokulviswanathan25@gmail.com>"]

[lib]
name = "anonymask_node"
crate-type = ["cdylib"]

[dependencies]
anonymask-core = { path = "../anonymask-core" }
napi = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
