[package]
name = "anonymask-node"
version = "1.1.0"
edition = "2021"
description = "Node.js bindings for anonymask-core"
license = "MIT"
authors = ["Gokul Viswanathan <gokulviswanathan25@gmail.com>"]

[lib]
name = "anonymask_node"
crate-type = ["cdylib"]

[dependencies]
anonymask-core = { path = "../anonymask-core" }
uuid = { version = "1.0", features = ["v4"] }
napi = { version = "2.16", features = ["serde-json"] }
napi-derive = "2.16"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
strip = "symbols"
