[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "anonymask"
version = "0.1.0"
description = "Secure anonymization/de-anonymization library for PII data"
license = { text = "MIT" }
authors = [
    { name = "Gokul Viswanathan", email = "gokul@example.com" },
]
maintainers = [
    { name = "Gokul Viswanathan", email = "gokul@example.com" },
]
keywords = ["anonymization", "PII", "privacy", "LLM", "RAG", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []
readme = "README.md"

[project.urls]
Homepage = "https://github.com/yourusername/anonymask"
Documentation = "https://github.com/yourusername/anonymask#readme"
Repository = "https://github.com/yourusername/anonymask.git"
Issues = "https://github.com/yourusername/anonymask/issues"
Changelog = "https://github.com/yourusername/anonymask/blob/main/CHANGELOG.md"

[tool.maturin]
manifest-path = "./Cargo.toml"
python-source = "."
module-name = "anonymask._anonymask"
sdist = true