[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "anonymask"
version = "0.1.0"
description = "Secure anonymization/de-anonymization library for PII data"
license = { text = "MIT" }
authors = [
    { name = "Gokul Viswanathan", email = "gokul@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = []

[tool.maturin]
manifest-path = "../../Cargo.toml"
python-source = "python"
module-name = "anonymask._anonymask"